fixed button and image alignment and sizing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,9 @@ body{
 .padtop8{
 	padding-top: 8px;
 }
+.centerit{
+	margin:auto;
+}
+.img-fluid{
+	width:100%;
+}
